# Face-Mask-Detection__AI-ML

./: README.md  main.py  pyproject.toml  requirements.txt
app/: app.py
app/static/: style.css
app/templates/: exit.html  index.html
outputs/: model_summary.txt
src/: data_preprocessing.py  detect_mask_video.py  model.py  utils.py
