[project]
name = "face-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "h5py>=3.15.1",
    "imutils>=0.5.4",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pygame>=2.6.1",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
